--- a/views/main.html
+++ b/views/main.html
@@ -4,9 +4,10 @@
 		<h1>전주대학교 캡스톤디자인 홈페이지</h1>
 	</head>
 	<body>
-		<h3>Hello, Fuckin Linux</h3>
+		<h3>Hello, Linux</h3>
 		<a href="https://www.jj.ac.kr/jj/index.jsp">전주대학교 홈페이지</a>
 		<a href="another.html">New Page test</a>
+		<a href="download">Download test</a>
 	</body>
 </html>
 
